Move search bar down to top: 55px to avoid overlapping title/nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -639,7 +639,7 @@
 
 /* Site Search */
 #site-search {
-  position: fixed; top: 10px; right: 16px; z-index: 1002;
+  position: fixed; top: 55px; right: 16px; z-index: 1002;
   width: 260px; font-family: 'Crimson Pro', serif;
 }
 #search-input {
